--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,25 @@
-version: '3.7'  # 更新版本以支持所有最新功能
+version: '3.7'
 services:
-  web:
+  game_server:
     build:
-      context: ./Builds/WebGL
-      dockerfile: Dockerfile
-    container_name: web
+      context: .
+      dockerfile: Dockerfile.game_server
+    container_name: game_server
+    ports:
+      - "7777:7777"
+
+  nginx_proxy:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    container_name: nginx_proxy
     ports:
       - "80:80"
       - "443:443"
-    networks:
-      - my_network
-    environment:
-      VIRTUAL_HOST: web-multiplayer-test.duckdns.org
-
-  dedicated_server:
-    build:
-      context: ./Builds/DedicatedServer
-      dockerfile: Dockerfile
-    container_name: dedicated_server
-    ports:
-      - "443:443"  # 修改端口映射以使用 HTTPS
-    networks:
-      - my_network
+    depends_on:
+      - game_server
     deploy:
       resources:
         limits:
           cpus: '2.0'
           memory: '512M'
-
-networks:
-  my_network:
-    driver: bridge  # 明確指定使用橋接模式
