--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,5 +24,24 @@ http {
             index index.html;
             try_files $uri $uri/ /index.html;
         }
+
+        location /api/ {
+            proxy_pass http://dedicated_server:7777;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_read_timeout 86400;
+        }
+
+        # WebSocket proxying
+        location /wss/ {
+            proxy_pass http://dedicated_server:7777;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_read_timeout 86400;
+        }
     }
 }
